
	* device/include/asm/r2k/features.h,
	  device/include/asm/r3ka/features.h,
	  device/include/asm/sm83/features.h,
	  device/include/asm/stm8/features.h,
	  device/include/asm/tlcs90/features.h,
	  device/include/asm/z80/features.h,
	  device/lib/_strcmp.c,
	  device/lib/_strcpy.c,
	  src/z80/peeph.def,
	  support/regression/tests/bug-3728.c:
	  Fix bug #3728.

2024-04-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/peeph.def,
	  src/z80/ralloc2.cc:
	  Improve use of hl, towards RFE #905.

2024-04-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Small z80 codegen improvements, part of RFE #905.

2024-04-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Small z80 codegen improvements, RFE #904.
	* support/regression/tests/bug-3727.c:
	  Regression test (for now disabled) for not-yet fixed bug #3727.

2024-03-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve code generation for z80 comparisons.
	* src/SDCClospre.cc,
	  src/SDCClospre.hpp:
	  Improve lospre debug output.

2024-03-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/stm8/ralloc.c,
	  src/pdk/ralloc.c,
	  src/z80/ralloc.c:
	  Enable more register packing optimizations.

2024-03-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peeph.def:
	  Optimize out some more intermediate pop/push.
	* src/z80/gen.c:
	  Fine-tune djnz optimization hint.

2024-03-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Fix an issue introduced in yesterday's fix for bug #3720.

2024-03-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix an optimization hint inversion bug that prevented use of djnz.

2024-03-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/SDCCsymt.c:
	  Fix bug #3720.
	* src/z80/gen.c: